src/test/deca/syntax/invalid/renduInter01/07while_missing_brace.deca
// Description:
//      tests de programme incorrecte lexicalement (il manque deux accrolades)
//
// Resultats:
//      Erreur syntaxique
//      Ligne 11 : manque de accrolade

{
    int x = 4;
    while (x == 4) 
        x = 3;
	println("hello error");
    

}
